--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,22 @@
         android:layout_height="wrap_content"
         android:background="@color/main_green">
 
+        <ImageButton
+            android:padding="10dp"
+            android:layout_margin="10dp"
+            android:id="@+id/add_button"
+            android:background="@drawable/oval"
+            android:layout_width="@dimen/round_button_diameter"
+            android:layout_height="@dimen/round_button_diameter"
+            android:layout_gravity="end|bottom"
+            android:src="@android:drawable/ic_input_add"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
         <ImageView
+            android:tint="@android:color/white"
+            android:elevation="@dimen/elevation_low"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView2"
